2006-01-31 Ian Rutt
 * Added snow densification to daily PDD scheme, and rewrote core of the
   scheme to make it more logical. Tested fairly thoroughly.

2006-01-19 Ian Rutt
 * Corrected CF mapping compliance in glimmer_CFproj.f90
 * Added ability to write CF-compilant mapping info to glimmer_proj.f90
 * (need to combine these two bits of code at some point)

2005-12-19 Magnus Hagdorn
 * configure.in: bump version to 0.5.7 for new development series

2005-12-19 Magnus Hagdorn
 * configure.in: bump version to 0.5.6
 * NEWS: update

2005-12-13 Magnus Hagdorn
 * m4macros/glimmer.m4: new file containing m4 macro for setting up GLIMMER
 * m4macros/Makefile.am: install glimmer.m4
 * Makefile.am: deal with m4macros dir
 * configure.in: generate m4macros/Makefile
 * glide_launch.py: add option to run a specific binary

2005-11-28 Magnus Hagdorn
 * glide_types.f90: add new variable for bed softness
 * glide_vars.def: ditto
 * glide.f90: initialise bed softness variable
 * glide_velo.f90: use bed softness variable to determine sliding parameter
 * glide_setup.f90: move some parameter scaling from glide_velo.f90 to here

2005-11-18 Ian Rutt
 * Added calving field to glide. This accessed by glint through accessor
   functions. The field is calculated in the marine limit routine in
   glide_setup.f90
 * Added possibility of supplying a list of hotstart files in glint API.
   This was requested, but is a big fudge, which I'm not terribly happy
   with. It might not work, either.

2005-11-18 Magnus Hagdorn
 * moved doc to CVS module glimmer-doc
 * Makefile.am: removed subdir doc
 * configure.in: removed doc related stuff

2005-11-16 Magnus Hagdorn
 * configure.in: add some sanity checks and use variables pointing to where 
   sources live
 * tests/Makefile.am: use variables pointing to where sources live
 * src/fortran/Makefile.am: ditto
 * glide_launch.py: avoid fortran sillyness where strings have to be quoted
 * cvs_version.py: we now have to specify where Entries file is